k8/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: api-gateway
 namespace: go-microservices
spec:
 replicas: 2
 selector:
   matchLabels:
     app: api-gateway
 template:
   metadata:
     labels:
       app: api-gateway
   spec:
     containers:
       - name: api-gateway
         image: gauss23/api-gateway:latest
         imagePullPolicy: Never
         ports:
           - containerPort: 80
         resources:
           requests:
             memory: "128Mi"
             cpu: "100m"
           limits:
             memory: "256Mi" 
             cpu: "200m"
         livenessProbe:
           httpGet:
             path: /health
             port: 80
           initialDelaySeconds: 30
           periodSeconds: 10
         readinessProbe:
           httpGet:
             path: /health
             port: 80
           initialDelaySeconds: 5
           periodSeconds: 5
