k8/product-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: go-microservices
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
