k8/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: go-microservices
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
